--- a/deploy/webhook-alidns/values.yaml
+++ b/deploy/webhook-alidns/values.yaml
@@ -6,14 +6,14 @@
 # solve the DNS01 challenge.
 # This group name should be **unique**, hence using your own company's domain
 # here is recommended.
-groupName: acme.lin07.me
+groupName: acme.mycompany.me
 
 certManager:
   namespace: cert-manager
   serviceAccountName: cert-manager
 
 image:
-  repository: lin07/cert-manager-webhook-alidns
+  repository: lurongkai/cert-manager-webhook-alidns
   tag: latest
   pullPolicy: Always
 
