--- a/deploy/rendered-manifest.yaml
+++ b/deploy/rendered-manifest.yaml
@@ -30,26 +30,6 @@ rules:
       - 'create'
 ---
 # Source: webhook-alidns/templates/rbac.yaml
-apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: ClusterRoleBinding
-metadata:
-  name: cert-manager-webhook-alidns:domain-solver
-  labels:
-    app: webhook-alidns
-    chart: webhook-alidns-0.1.0
-    release: cert-manager-webhook-alidns
-    heritage: Helm
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: cert-manager-webhook-alidns:domain-solver
-subjects:
-  - apiGroup: ""
-    kind: ServiceAccount
-    name: cert-manager
-    namespace: cert-manager
----
-# Source: webhook-alidns/templates/rbac.yaml
 # apiserver gets the auth-delegator role to delegate auth decisions to
 # the core apiserver
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -70,6 +50,26 @@ subjects:
     kind: ServiceAccount
     name: cert-manager-webhook-alidns
     namespace: default
+---
+# Source: webhook-alidns/templates/rbac.yaml
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRoleBinding
+metadata:
+  name: cert-manager-webhook-alidns:domain-solver
+  labels:
+    app: webhook-alidns
+    chart: webhook-alidns-0.1.0
+    release: cert-manager-webhook-alidns
+    heritage: Helm
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cert-manager-webhook-alidns:domain-solver
+subjects:
+  - apiGroup: ""
+    kind: ServiceAccount
+    name: cert-manager
+    namespace: cert-manager
 ---
 # Source: webhook-alidns/templates/rbac.yaml
 # Grant the webhook permission to read the ConfigMap containing the Kubernetes
@@ -185,7 +185,7 @@ metadata:
     release: cert-manager-webhook-alidns
     heritage: Helm
   annotations:
-    certmanager.k8s.io/inject-ca-from: "default/cert-manager-webhook-alidns-webhook-tls"
+    cert-manager.io/inject-ca-from: "default/cert-manager-webhook-alidns-webhook-tls"
 spec:
   group: acme.mycompany.me
   groupPriorityMinimum: 1000
